# druglab

./: .gitignore  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml
notebooks/: .gitignore  mopac.ipynb  simple_pipeline.ipynb
notebooks/data/: ca2_inhibitors.csv
notebooks/pharm/: .gitignore  pharm-screening.ipynb
notebooks/storage/: .gitignore
notebooks/synthesis/: .gitignore
notebooks/tests/: .gitignore  test_feats1.ipynb  test_pharm1.ipynb  test_pharm2.ipynb  test_storage.ipynb  test_synthesize.ipynb
src/druglab/: io.py
src/druglab/db/: __init__.py  base.py  conformer.py  indexing.py  molecule.py  reaction.py  types.py  utils.py
src/druglab/featurize/: __init__.py  base.py  composite.py  molecules.py  reactions.py
src/druglab/io/: __init__.py  _record.py  exceptions.py  formats.py  readers.py  utils.py  writers.py
src/druglab/mopac/: __init__.py  config.py  energy.py  interface.py  optimizer.py  test.ipynb
src/druglab/parmed/: __init__.py  alterations.py  parameterizer.py  pocketloc.py
src/druglab/pharm/: __init__.py  adjusters.py  adjustments.py  bittify.py  calculations.py  definitions.pharm  definitions.yaml  drawopts.py  features.py  featurizer.py  fingerprint.py  ftypes.py  functions.py  generator.py  groups.py  parser.py  pharmacophore.py  pprofile.py  (+3 more)
src/druglab_scripts/: cli.py  mols.py  rxns.py  utils.py
tests/: test_blocks.py  test_db.py  test_db_conformer.py  test_db_indexing.py  test_db_metadata.py  test_engines.py  test_io.py  test_io_db_bridge.py  test_pipe.py  test_pipe_cache.py  test_safety.py
tests/deprecated/: test_blocks.py  test_db.py  test_db_conformer.py  test_db_overlay.py  test_io.py  test_safety.py
tests/integration/: conftest.py  test_indexing_use.py  test_overlay_table_use.py  test_pipeline_multiprocessing.py  test_table_persistence.py
tests/shared/: make_dummy_db.py
tests/storage/: test_base.ipynb  test_base.py
(+113 files in other folders)
