[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "druglab"
version = "0.0.2"
description = "A personal toolkit for computational drug design."
dependencies = [
  "numpy >=1.21",
  "rdkit >=2024",
  "mpire",
  "scikit-learn",
  "tqdm",
  "click", "click_config_file",
  "dill",
  "h5py",
  "matplotlib"
  # "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest"]
full = ["pandas"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
druglab = "druglab_scripts.cli:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"druglab.pharm" = ["definitions.yaml"]
