[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "druglab"
version = "0.1.0"
description = "Common Utilities for Drug Discovery"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Araz Ghanbarpour", email = "ghanbarpour.araz@gmail.com"}
]
dependencies = [
    "rdkit",
    "numpy",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]